feat: seminar-05 assignemt
